# docker_dremio_dbt_project

./: README.md  load_env.py  pyproject.toml
dbt/: .user.yml  dbt_project.yml  profiles.yml
dbt/models/gold/: gold_qtde_clientes.sql
dbt/models/silver/: silver_qtde_clientes.sql  silver_tb_cliente.sql  sources.yml
docker/: docker-compose.yml
src/py_ingestor/: main.py
src/py_ingestor/data/: address.csv  sales.csv
